<resources>

    <string name="app_name">Rádio S.U.</string>
    <string name="email">E-mail</string>
	<string name="senha">Senha</string>
	<string name="conectar">Conectar</string>
	<string name="confacebook"></string>
	<string name="cadastro">Cadastre-se</string>
	<string name="esqsenha">Esqueceu a senha?</string>
	<string name="erro_autenticacao">Usuário ou senha incorreta</string>
	<string name="str_play">Play</string>
    <string name="str_pause">Pause</string>
    <string name="str_stop">Stop</string>
    <string name="artista">Artista</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="cidade">Cidade</string>
    <string name="musica">Musica</string>
    <string name="recado">Recado</string>
    <string name="com.facebook.sdk.Applicationld">800418770027994</string>
    <string name="app_id">800418770027994</string>
    <string name="pedir">Pedir Musica</string>
    <string name="pedir_musica">Pedir Musica</string>
    <string name="estado">estado</string>
    <string name="confirmar_senha">Confirmação de senha</string>
    <string name="sexo">Sexo</string>
    <string name="nascimento">Nascimento</string>
    <string name="cadastrar_se">Cadastrar-se</string>


</resources>
