<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <TextView
            android:id="@+id/textView_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"/>

        <EditText
            android:id="@+id/editText_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:ems="10" />

        <TextView
            android:id="@+id/textView_estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado"/>

        <Spinner
            android:id="@+id/spinner_estado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/textView_sexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo"/>

        <Spinner
            android:id="@+id/spinner_sexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <TextView
            android:id="@+id/textView_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cidade"/>

        <EditText
            android:id="@+id/editText_cidade"
            android:layout_width="match_parent"
            android:inputType="textCapWords"
            android:layout_height="wrap_content"
            android:ems="10" />



        <TextView
            android:id="@+id/textView_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:id="@+id/editText_email"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/senha"/>

        <EditText
            android:id="@+id/editText_senha"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView_confirmaSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmar_senha"/>

        <EditText
            android:id="@+id/editText_confirmaSenha"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/textView_nascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nascimento"/>

        <EditText
            android:id="@+id/editText_nascimento"
            android:layout_width="match_parent"
            android:inputType="date"
            android:layout_height="wrap_content"
            android:ems="10" />


        <TextView
            android:id="@+id/telefoneped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"/>

        <EditText
            android:id="@+id/editText_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_cadastrar"
            style="@style/ButtonRSU"
            android:text="@string/cadastrar_se"
            android:layout_gravity="center"/>

    </LinearLayout>



</ScrollView>
