<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/textView_cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/cidade"/>

        <EditText
            android:id="@+id/editText_cidade"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:ems="10" />


        <TextView
            android:id="@+id/telefoneped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone"/>

        <EditText
            android:id="@+id/editText_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/artistaped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artista"/>

        <Spinner
            android:id="@+id/spinner_artistas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/musicaped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/musica"/>

        <Spinner
            android:id="@+id/spinner_musicas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/recadoped"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recado"/>

        <EditText
            android:id="@+id/editText_recado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:ems="10" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_pedir"
            android:text="@string/pedir_musica"
            style="@style/ButtonRSU"
            android:layout_gravity="center"/>

    </LinearLayout>



</ScrollView>
